# Marimetrics

./: .gitattributes  .gitignore  .gitmodules  CMakeLists.txt  README.md  bitbucket-pipelines.yml  dev-utils
dev_utils/: README.md  build.py  debug.py  image_hashes.py  process.py
dev_utils/image_hashes/: application.txt  bootloader.txt
gateway/: README.md  ble.py  s3_upload.py
globe/: README.md  globe.h
globe/app/: README.md  config.c  config.h  error_handling.c  logging.c  logging.h  main.c  peripheral_management.c  peripheral_management.h
globe/board/: adc.c  advertising.c  ble.c  board.h  board_internal.h  board_revision_defs.h  board_test.c  clock.c  connection_parameters.c  critical_section.c  delay.c  device_id.c  features.c  i2c.c  init.c  nus.c  peer_manager.c  peripheral.c  pin_defs.h  power_management.c  pwm.c  spi.c  stack.c  system_reset.c  temperature.c  timer.c  uart.c
globe/board/config/: custom_board.h  post_app_config.h  sdk_config.h
globe/bootloader/: bootloader_main.c  debug.pem  debug_pk.c  debug_pk.pem  pk.c  pk.pem
globe/drivers/: 89bsd.c  89bsd.h  fdoem.c  fdoem.h  lc709203f.c  lc709203f.h  max31856.c  max31856.h  mcp3208.c  mcp3208.h  microsens_msfet.c  microsens_msfet.h  motion.c  motion.h  sdcard.c  sdcard.h  sky66112.c  sky66112.h  thermistor.c  thermistor.h
globe/misc/: build_strings.h  cmake_strings.c.in  debug.c  debug.h  escape_string.c  git_revision.c  malloc_lock.c  task.c  task.h  utils.h
globe/misc/filesystem/: CMakeLists.txt  fatfs_bindings.c  filesystem.c  filesystem.h  newlib_bindings.c
globe/test/: tests.c
